<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright © 2021, California Institute of Technology ("Caltech").
U.S. Government sponsorship acknowledged.

All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

• Redistributions of source code must retain the above copyright notice,
  this list of conditions and the following disclaimer.
• Redistributions must reproduce the above copyright notice, this list of
  conditions and the following disclaimer in the documentation and/or other
  materials provided with the distribution.
• Neither the name of Caltech nor its operating division, the Jet Propulsion
  Laboratory, nor the names of its contributors may be used to endorse or
  promote products derived from this software without specific prior written
  permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
POSSIBILITY OF SUCH DAMAGE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Inherit release profile, reporting, SNAPSHOT repo, etc. from parent repo -->
    <parent>
        <groupId>gov.nasa</groupId>
        <artifactId>pds</artifactId>
        <version>1.18.0</version>
    </parent>
    
    <groupId>gov.nasa.pds</groupId>
    <artifactId>registry-manager</artifactId>
    <version>4.7.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <name>PDS Registry Manager</name>
    <description>
        The Registry Manager software can be used to manage the Elasticsearch-based PDS Registry Service instance.
    </description>
        
    <organization>
        <name>Jet Propulsion Laboratory, California Institute of Technology</name>
    </organization>
    
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Command-line args parser -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.9.0</version>
        </dependency>
        <!-- Registry Common library-->
        <dependency>
            <groupId>gov.nasa.pds</groupId>
            <artifactId>registry-common</artifactId>
            <version>1.6.0-SNAPSHOT</version>
        </dependency>
        <!-- JSON parser -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!-- CSV reader -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.9</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Add POM version to JAR's manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <!-- SpringBoot single JAR executable. -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.2.5.RELEASE</version>
                <configuration>
                    <mainClass>gov.nasa.pds.registry.mgr.RegistryManagerMain</mainClass>
                    <layout>JAR</layout>
                </configuration>
                <executions>
                    <execution>
                        <id>exec-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Binary release (ZIP and tar.gz). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>bin-release</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/tar-assembly.xml</descriptor>
                                <descriptor>src/main/assembly/zip-assembly.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Disable Site for now -->
            <plugin>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                    <skipDeploy>true</skipDeploy>
                </configuration>
            </plugin>
            <!-- Java Docs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <detectJavaApiLink>false</detectJavaApiLink>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.ragedunicorn.tools.maven</groupId>
                <artifactId>github-release-maven-plugin</artifactId>
                <version>1.0.7</version>
                <executions>
                  <execution>
                    <id>default-cli</id>
                    <configuration>
                    <owner>nasa-pds</owner>
                    <repository>registry-mgr</repository>
                    <server>github-oauth</server>
                    <tagName>${project.version}</tagName>
                    <name>${project.version}</name>
                    <targetCommitish>main</targetCommitish>
                    <body>Release ${project.version} see changelog https://github.com/NASA-PDS/registry-mgr/blob/main/CHANGELOG.md</body>
                    <assets>
                        <asset>target/registry-manager-${project.version}-bin.zip</asset>
                        <asset>target/registry-manager-${project.version}-bin.tar.gz</asset>
                    </assets>
            </configuration>
          </execution>
        </executions>
      </plugin>
        </plugins>
    </build>
    <scm>
        <url>https://github.com/NASA-PDS/registry-mgr/tree/master</url>
        <connection>scm:git:git://github.com/NASA-PDS/registry-mgr.git</connection>
        <developerConnection>scm:git:git@github.com:NASA-PDS/registry-mgr.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <distributionManagement>
      <repository>
        <id>github</id>       
        <name>Releases</name>
        <url>https://github.com/NASA-PDS/registry-mgr</url> 
    </repository>
</distributionManagement>   

</project>
